--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
-*
-!*.md
-!.gitignore
+USTC_level1
+USTC_level2
+SUSTech_PHY104/半导体温度计
+SUSTech_PHY104/单摆测加速度
+SUSTech_PHY104/单摆的设计与时间统计规律
+SUSTech_PHY104/伏安特性曲线
+SUSTech_PHY104/半导体温度计
+SUSTech_PHY104/单摆测加速度
+SUSTech_PHY104/单摆的设计与时间统计规律
+SUSTech_PHY104/单文件
+SUSTech_PHY104/实验报告指南.doc
+SUSTech_PHY104/密里根油滴实验
+SUSTech_PHY104/热敏电阻
+SUSTech_PHY104/物理实验报告扫描.pdf
+SUSTech_PHY104/示波器
+SUSTech_PHY104/迈克尔逊干涉仪
+SUSTech_PHY104/透镜参数测量与使用
